--- a/assets/Styles/mobile.css
+++ b/assets/Styles/mobile.css
@@ -15,27 +15,8 @@
   /* Fonts */
   --Font-size-paragraph: 16px;
 
-  /* @font-face { */
-  /* font-family: "Young-Serif";
-    font-weight: 400;
-    src: url("D:/New folder/recipe-page-main/assets/fonts/young-serif/YoungSerif-Regular.ttf"); */
-
-  /* font-family: "Outfit-400"; */
-  /* font-weight: 400; */
-  /* src: url("D:/New folder/recipe-page-main/assets/fonts/outfit/Outfit-VariableFont_wght.ttf"); */
-
-  /* font-family: "Outfit-600"; */
-  /* font-weight: 600; */
-  /* src: url("D:/New folder/recipe-page-main/assets/fonts/outfit/Outfit-VariableFont_wght.ttf"); */
-
-  /* font-family: "Outfit-700"; */
-  /* font-weight: 700; */
-  /* src: url("D:/New folder/recipe-page-main/assets/fonts/outfit/Outfit-VariableFont_wght.ttf"); */
-  /* } */
-
   /* Misc */
   --div-radius: 0.5em;
-  --mobile: 375px;
 }
 
 .attribution {
@@ -48,36 +29,30 @@
 }
 
 body {
-  background-color: var(--Stone-100);
+  background-color: var(--White);
 }
-.mobileHeader {
-  display: none;
-}
+
 div {
   border-radius: var(--div-radius);
 }
-
-.Container {
-  background-color: var(--White);
-  margin: auto;
-  min-width: 400px;
-  width: 40%;
-  padding: 2.5rem;
-}
-/* @media only screen and (max-width: 375px) {
-  .Container {
-    width: 100%;
-    border-radius: 0px;
-    padding: 0em;
-  }
-} */
-
-.Container img {
-  border-radius: var(--div-radius);
-  /* object-fit: cover; */
+.mobileHeader {
   width: 100%;
   height: auto;
+  margin: auto;
+  padding: 0em;
 }
+.Container {
+  background-color: var(--White);
+  /* min-width: 400px; */
+  width: 100%;
+  /* padding: 0.5rem; */
+}
+.Container img {
+  display: none;
+}
+/* .Container img {
+  /* border-radius: var(--div-radius); */
+/* object-fit: cover; */
 
 .Summary {
   background-color: var(--Rose-50);
