--- a/assets/Styles/mobile.css
+++ b/assets/Styles/mobile.css
@@ -142,3 +142,8 @@ td {
   color: var(--Brown-800);
   font-weight: 700;
 }
+em {
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
