--- a/assets/Styles/style.css
+++ b/assets/Styles/style.css
@@ -167,3 +167,8 @@ td {
   color: var(--Brown-800);
   font-weight: 700;
 }
+em {
+  font-family: "Outfit", sans-serif;
+  font-weight: 700;
+  font-style: normal;
+}
